<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.skilliantech.deliveryapplication.Fragments.DeliryDetailFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:clipToPadding="false"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="#fff"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingBottom="7dp"
                android:paddingLeft="10dp"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:paddingTop="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_mock"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_id_mock"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--<ImageView-->
                    <!--android:id="@+id/head_image"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:scaleType="centerCrop"-->
                    <!--android:src="@drawable/head_image" />-->

                <!--android:layout_alignBottom="@id/head_image"-->
                <!--android:layout_alignStart="@id/head_image"-->

                <TextView
                    android:id="@+id/head_image_left_text"
                    style="@style/ContentImageBadgeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:text="@string/requests_count_mock" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/white_radius"/>

            <!-- content body layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgContent"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp">

                <!-- avatar and name part -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/content_avatar_title"
                        style="@style/ContentMainBadgeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="5dp"
                        android:text="@string/sender_badge" />


                    <ImageView
                        android:id="@+id/content_avatar"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_below="@id/content_avatar_title"
                        android:scaleType="centerCrop"
                        android:src="@drawable/deliver_person" />

                    <TextView
                        android:id="@+id/content_name_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/content_avatar"
                        android:layout_marginBottom="2dp"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/content_avatar"
                        android:text="@string/client_name_mock"
                        android:textColor="@color/mainTextColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/content_rating_stars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/content_name_view"
                        android:layout_below="@id/content_name_view"
                        android:src="@drawable/stars" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/content_rating_stars"
                        android:layout_marginBottom="-2dp"
                        android:layout_marginStart="3dp"
                        android:layout_toEndOf="@id/content_rating_stars"
                        android:text="@string/rating_mock"
                        android:textColor="@color/contentBadgeTitle"
                        android:textSize="10sp" />

                </RelativeLayout>

                <!-- divider line -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="9dp"
                    android:src="@color/contentDividerLine" />

                <!-- addresses part -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/content_from_badge"
                            style="@style/ContentMainBadgeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:textSize="10dp"
                            android:text="@string/from_badge" />

                        <TextView
                            android:id="@+id/content_from_address_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/content_from_badge"
                            android:layout_below="@id/content_from_badge"
                            android:text="@string/content_from1_mock"
                            android:textColor="@color/mainTextColor"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/content_to_badge"
                            style="@style/ContentMainBadgeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10dp"
                            android:layout_alignParentStart="true"
                            android:text="@string/to_badge" />

                        <TextView
                            android:id="@+id/content_to_address_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/content_to_badge"
                            android:layout_below="@id/content_to_badge"
                            android:text="@string/content_to1_mock"
                            android:textColor="@color/mainTextColor"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>

                <!-- divider line -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="7dp"
                    android:src="@color/contentDividerLine" />

                <!-- dates part -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/content_delivery_date_badge"
                            style="@style/ContentMainBadgeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:text="@string/delivery_date_badge" />

                        <TextView
                            android:id="@+id/content_delivery_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/content_delivery_date_badge"
                            android:layout_below="@id/content_delivery_date_badge"
                            android:text="@string/delivery_time_mock"
                            android:textColor="@color/mainTextColor"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/content_delivery_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/content_delivery_time"
                            android:layout_below="@id/content_delivery_time"
                            android:text="@string/delivery_date_mock"
                            android:textColor="@color/mainTextColor"
                            android:textSize="10sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/content_deadline_badge"
                            style="@style/ContentMainBadgeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:text="@string/deadline_badge" />

                        <TextView
                            android:id="@+id/content_deadline_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/content_deadline_badge"
                            android:layout_below="@id/content_deadline_badge"
                            android:text="@string/deadline_time_mock"
                            android:textColor="@color/mainTextColor"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/content_delivery_date1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/content_deadline_time"
                            android:text="@string/delivery_date_mock"
                            android:textColor="@color/mainTextColor"
                            android:textSize="10sp" />

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

</LinearLayout>
